--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,33 +3,44 @@ layout: compress
 ---
 
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en" dir="ltr" class="no-js">
 
 <!-- Head -->
 {% include site/head.html %}
 <!-- End Head -->
 
-<body class="{{page.layout | slugify}}">
+<body class="{{page.layout | slugify}} grid-y" style="height: 100vh;">
 
-<!-- Navigation -->
-{% include reveal/menu.html %}
-<!-- End Navigation -->
+{% if page.layout == "home" %}
+<div class="grid-y align-center loader hide">
+  <div class="shrink cell">
+    {% include site/loading.html %}
+  </div>
+</div>
+{% endif %}
+
 
 <!-- Header -->
+<div class="cell shrink" style="z-index: 1039" data-aos="fade-in" data-aos-delay="100">
 {% include site/header.html %}
+</div>
 <!-- End Header -->
 
-<main id="main" class="swup-transition-fade-up">
-<!-- Content -->
-{{content}}
-<!-- End Content -->
-</main>
+<!-- Main -->
+<div class="cell auto" id="main" data-aos="fade-in" data-aos-delay="100">
+  <main class="grid-x align-middle" style="min-height: 100%">
+    <div class="cell">
+    {{content}}
+    </div>
+  </main>
+</div>
+<!-- Main -->
 
-
-<!-- Footer -->
-{% include site/footer.html %}
-<!-- End Footer -->
+<!-- Navigation -->
+{% include reveal/navigation.html %}
+<!-- End Navigation -->
 
 </body>
+
 
 </html>
