--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,8 +6,8 @@ layout: default
 <div class="grid-x grid-padding-x small-up-1 medium-up-1">
   {% assign projects = paginator.posts | where: "is-featured", "true" %}
   {% for project in projects %}
-  <div class="small-12 cell">
-    <a href="{{ project.url }}" class="h1">{{ project.client }} <span class="dark-gray">{{ project.title }}</span></a>
+  <div class="small-12 cell" data-fx="1">
+    <a href="{{ project.url }}" class="h1" data-img="{{project.image}}">{{ project.client }} <span class="dark-gray">{{ project.title }}</span></a>
   </div>
   {% endfor %}
 </div>
