--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,11 +3,17 @@ layout: default
 ---
 
 <!-- Home Selected Projects -->
-<div class="grid-x grid-padding-x small-up-1 medium-up-1">
+<div class="grid-x grid-padding-x small-up-1 medium-up-1 block">
   {% assign projects = paginator.posts | where: "is-featured", "true" %}
   {% for project in projects %}
-  <div class="small-12 cell" data-fx="1">
-    <a href="{{ project.url }}" class="h1" data-img="{{project.image}}">{{ project.client }} <span class="dark-gray">{{ project.title }}</span></a>
+  <div class="small-12 cell">
+
+	<div class="content">
+		<div class="block" data-fx="1">
+    <a href="{{ project.url }}" class="h1 block__link" data-img="{{project.image}}">{{ project.client }} <span class="dark-gray">{{ project.title }}</span></a>
+		</div>
+	</div>
+
   </div>
   {% endfor %}
 </div>
