--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -33,6 +33,15 @@
 // 2. Global
 // ---------
 
+a {
+	outline: none;
+}
+
+button:focus,
+a:focus {
+	outline: none;
+}
+
 body {
   cursor: default;
   font-kerning: normal;
@@ -408,4 +417,67 @@ html.is-animating .swup-transition-fade {
 }
 html.is-animating .swup-transition-color {
   opacity: 0;
+}
+
+// Hover Effect
+
+.block__link {
+	position: relative;
+	cursor: pointer;
+	padding: 0.5rem 0;
+}
+
+.block__link span {
+	display: inline-block;
+	white-space: pre;
+}
+
+.block[data-fx="1"] a::after,
+a.content__text-link[data-fx="1"]::after {
+	content: '';
+	z-index: -1;
+	width: 100%;
+	bottom: 0.25rem;
+	left: 0;
+	position: absolute;
+	height: 2px;
+	background: currentColor;
+	transform: scale3d(0,1,1);
+	transform-origin: 0% 50%;
+	transition: transform 0.2s cubic-bezier(0.390, 0.575, 0.565, 1.000);
+}
+
+.block[data-fx="1"] a:hover::after,
+a.content__text-link[data-fx="1"]:hover::after {
+	transform: scale3d(1,1,1)
+}
+
+.hover-reveal {
+	position: fixed;
+	width: 200px;
+	height: 150px;
+	top: 0;
+	left: 0;
+	pointer-events: none;
+	opacity: 0;
+}
+
+.hover-reveal__inner,
+.hover-reveal__img {
+	width: 100%;
+	height: 100%;
+	position: relative;
+}
+
+
+.hover-reveal__img {
+	background-size: cover;
+	background-position: 50% 50%;
+}
+
+.block {
+position: relative;
+}
+.content {
+position: relative;
 }
