--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@ layout: compress
 <!-- End Header -->
 
 <!-- Main -->
-<main class="grid-x align-middle" style="min-height: 100%">
+<main class="grid-y align-center" style="min-height: 80vh">
   <div class="cell">
   {{content}}
   </div>
