--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@ layout: default
 
 <!-- Page Image -->
 {% if page.image %}
-<section class="grid-container">
+<section class="grid-container" data-aos="fade-in">
   <div class="grid-x grid-padding-x grid-padding-y">
     <div class="small-12 cell">
 
