--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -9,7 +9,7 @@ layout: default
     <div class="small-12 cell">
 
       {% assign image = page.image %}
-      <div data-interchange="{% include images/interchange-img-small-12-medium-12-cell.html %}" class="light-gray-background image">
+      <div data-interchange="{% include images/interchange-img-small-12-medium-12-cell.html %}" class="image">
         {% if page.video %}
         <div class="grid-y height-100 align-center video content">
           <div class="shrink cell text-center" data-src="{{page.video}}">
