--- a/_includes/site/head.html
+++ b/_includes/site/head.html
@@ -23,6 +23,7 @@
 
   {% seo title=false %}
 
+  <link rel="dns-prefetch" href="//ajax.googleapis.com">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
 
