--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -6,7 +6,7 @@ layout: default
 <div class="grid-x grid-padding-x grid-padding-y">
   {% assign projects = paginator.posts %}
   {% for project in projects %}
-    {% include blocks/excerpt.html %}
+    {% include partials/excerpt.html %}
   {% endfor %}
 </div>
 <!-- End Projects -->
