--- a/_includes/site/header.html
+++ b/_includes/site/header.html
@@ -4,7 +4,7 @@
   {% if page.layout == "page" %}
   <a href="/" class="h4">{{page.title}}{% if page.client %}<span class="dark-gray padding-left-1 show-for-large">{{page.client}}</span>{% endif %}</a>
   {% else %}
-  <a href="/" class="h4">{{site.title}}<span class="dark-gray padding-left-1 show-for-large">{{site.job}}</span></a>
+  <a href="/" class="h5 home-link"></a>
   {% endif %}
   </div>
   <div class="shrink cell" style="z-index: 1007">
