--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,25 +11,25 @@ layout: compress
 
 <body class="{{page.layout | slugify}}">
 
-<main id="swup" class="transition-fade">
+<div id="swup" class="transition-fade">
 
 <!-- Header -->
 {% include site/header.html %}
 <!-- End Header -->
 
 <!-- Main -->
-<div class="grid-y align-center" style="min-height: 80vh">
+<main class="grid-y grid-padding-y align-center" style="min-height: 80vh">
   <div class="cell">
   {{content}}
   </div>
-</div>
+</main>
 <!-- Main -->
 
 <!-- Navigation -->
 {% include reveal/navigation.html %}
 <!-- End Navigation -->
 
-</main>
+</div>
 
 </body>
 
