--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,12 +4,10 @@ layout: default
 
 <!-- Home Selected Projects -->
 <div class="grid-x grid-padding-x small-up-1 medium-up-1">
-  {% assign projects = paginator.posts | where: "is-featured", "true" %}
+  {% assign projects = paginator.posts %}
   {% for project in projects %}
   <div class="small-12 cell" data-fx="1">
-
     <a href="{{ project.url }}" class="h1 block__link" data-img="{{project.image}}">{{ project.client }} <span class="dark-gray">{{ project.title }}</span></a>
-
   </div>
   {% endfor %}
 </div>
