--- a/assets/scss/_settings.scss
+++ b/assets/scss/_settings.scss
@@ -66,8 +66,7 @@
 // ---------
 
 $global-font-size: 100%;
-// $global-width: rem-calc(1200);
-$global-width: rem-calc(1440);
+$global-width: rem-calc(1200);
 $global-lineheight: 1.5;
 /*
 $light-gray: #e6e6e6;
@@ -82,6 +81,7 @@ $dark-gray: #8a8a8a;
 $black: #0a0a0a;
 $white: #fefefe;
 $yellow: #FFFF00;
+$red: #e20814;
 /*
 $foundation-palette: (
   primary: #1779ba,
@@ -93,7 +93,7 @@ $foundation-palette: (
 */
 $foundation-palette: (
   primary: $white,
-  secondary: $yellow,
+  secondary: $red,
   success: #3adb76,
   warning: #ffae00,
   alert: #cc4b37,
@@ -917,6 +917,8 @@ $grid-margin-gutters: (
 $grid-margin-gutters: (
   small: 2rem,
   medium: 3rem,
+  large: 3rem,
+  xlarge: 4rem,
   xxlarge: 5rem
 );
 $grid-padding-gutters: $grid-margin-gutters;
