--- a/assets/scss/_icons.scss
+++ b/assets/scss/_icons.scss
@@ -25,14 +25,14 @@ Single-colored icons can be modified like so:
   font-size: 2rem;
 }
 
-.icon-clients {
-  font-size: 6rem;
-}
-
 .icon-play_arrow {
-  font-size: 5rem;
+  font-size: 2.5rem;
 }
 
 .icon-sort {
+  font-size: 2rem;
+}
+
+.icon-add {
   font-size: 2rem;
 }
