--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -11,4 +11,4 @@ $letter-spacing--looser: 0.25em;
 $letter-spacing--loose: 0.125em;
 
 $sans-regular: 'System', sans-serif;
-$sans-bold: 'Messina Sans Regular', sans-serif;
+$sans-bold: 'System', sans-serif;
