--- a/_includes/site/header.html
+++ b/_includes/site/header.html
@@ -2,7 +2,7 @@
 <header class="grid-x grid-padding-x grid-padding-y align-justify align-middle" id="maintest">
   <div class="auto cell">
   {% if page.layout == "page" %}
-  <a href="/" class="h4">{{page.title}}{% if page.client %}<span class="dark-gray padding-left-1 show-for-large">{{page.client}}</span>{% endif %}</a>
+  <a data-toggle="navigation" class="h5">{{page.title}}{% if page.client %}<span class="dark-gray padding-left-1 show-for-large">{{page.client}}</span>{% endif %}</a>
   {% else %}
   <a data-toggle="navigation" class="h5 home-link"></a>
   {% endif %}
