--- a/assets/scss/_settings.scss
+++ b/assets/scss/_settings.scss
@@ -784,10 +784,12 @@ $reveal-background: $black;
 $reveal-width: 600px;
 $reveal-max-width: $global-width;
 $reveal-padding: $global-padding;
-$reveal-border: 1px solid $medium-gray;
+// $reveal-border: 1px solid $medium-gray;
+$reveal-border: 0px solid $medium-gray;
 $reveal-radius: $global-radius;
 $reveal-zindex: 1005;
 $reveal-overlay-background: rgba($black, 0.45);
+$reveal-overlay-background: rgba($black, 0.85);
 
 // 48. Slider
 // ----------
