--- a/assets/scss/_settings.scss
+++ b/assets/scss/_settings.scss
@@ -788,8 +788,8 @@ $reveal-padding: $global-padding;
 $reveal-border: 0px solid $medium-gray;
 $reveal-radius: $global-radius;
 $reveal-zindex: 1005;
-$reveal-overlay-background: rgba($black, 0.45);
-$reveal-overlay-background: rgba($black, 0.85);
+// $reveal-overlay-background: rgba($black, 0.45);
+$reveal-overlay-background: rgba($black, 0.95);
 
 // 48. Slider
 // ----------
