--- a/_includes/reveal/meta.html
+++ b/_includes/reveal/meta.html
@@ -3,28 +3,28 @@
     <div class="shrink cell text-center">
 
       {% if page.director %}
-      	<div class="dark-gray">Director</div>
+      	<div class="dark-gray small text-uppercase">Director</div>
       <div class="margin-bottom-1">
       {{ page.director }}
       </div>
       {% endif %}
   
       {% if page.producer %}
-    	  <div class="dark-gray">Producer</div>
+    	  <div class="dark-gray small text-uppercase">Producer</div>
       <div class="margin-bottom-1">
       {{ page.producer }}
       </div>
       {% endif %}
   
       {% if page.production-company %}
-    	  <div class="dark-gray">Production Company</div>
+    	  <div class="dark-gray small text-uppercase">Production Company</div>
       <div class="margin-bottom-1">
       {{ page.production-company }}
       </div>
       {% endif %}
   
       {% if page.awards %}
-    	  <div class="dark-gray">Awards</div>
+    	  <div class="dark-gray small text-uppercase">Awards</div>
       <div class="margin-bottom-1">
       {% for award in page.awards %}
       <div>{{ award }}</div>
