--- a/_includes/site/loading.html
+++ b/_includes/site/loading.html
@@ -1,5 +1,5 @@
 <div class="grid-x grid-padding-x align-center">
-  <div class="small-11 medium-6 cell h1">
-Test
+  <div class="small-11 medium-6 cell h1 text-center dark-gray">
+    {{site.title}}
   </div>
 </div>
