--- a/_layouts/information.html
+++ b/_layouts/information.html
@@ -3,15 +3,17 @@ layout: default
 ---
 
 <div class="grid-container">
-  <div class="grid-x grid-padding-x grid-padding-y">
+  <div class="grid-x grid-padding-x grid-padding-y align-center">
 
     <div class="small-12 medium-6 cell" data-aos="fade-in">
         {{page.content | markdownify}}
+
+    <div class="small dark-gray text-uppercase margin-top-2">Website by Reformation</div>
     </div>
 
-    <div class="small-12 medium-6 cell" data-aos="fade-in">
+    <div class="small-12 medium-shrink cell" data-aos="fade-in">
      {% for detail in page.details %}
-        <h5>{{detail.title}}</h5>
+        <div class="small text-uppercase">{{detail.title}}</div>
         {{detail.text | markdownify}}
       {% endfor %}
     </div>
