--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -121,6 +121,10 @@ url('/assets/img/cursor@2x.png') 2x,
 
 // 5. Typography
 // -------------
+.small {
+font-size: 80%;
+letter-spacing: 0.1rem;
+}
 
 .menu .menu-text {
 font-weight: normal;
