--- a/_includes/site/loading.html
+++ b/_includes/site/loading.html
@@ -1,5 +1,5 @@
 <div class="grid-x grid-padding-x align-center">
-  <div class="small-11 medium-6 cell h1 text-center dark-gray">
+  <div class="small-11 medium-6 cell h1 text-center">
     {{site.title}}
   </div>
 </div>
