--- a/_includes/site/head.html
+++ b/_includes/site/head.html
@@ -15,11 +15,11 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicons/favicon-16x16.png">
   <link rel="manifest" href="/assets/favicons/site.webmanifest">
-  <link rel="mask-icon" href="/assets/favicons/safari-pinned-tab.svg" color="#3c31d5">
+  <link rel="mask-icon" href="/assets/favicons/safari-pinned-tab.svg" color="#e20814">
   <link rel="shortcut icon" href="/assets/favicons/favicon.ico">
-  <meta name="msapplication-TileColor" content="#3c31d5">
+  <meta name="msapplication-TileColor" content="#0a0a0a">
   <meta name="msapplication-config" content="/assets/favicons/browserconfig.xml">
-  <meta name="theme-color" content="#ffffff">
+  <meta name="theme-color" content="#0a0a0a">
 
   {% seo title=false %}
 
