--- a/assets/scss/_icons.scss
+++ b/assets/scss/_icons.scss
@@ -21,7 +21,7 @@ Single-colored icons can be modified like so:
   font-size: 2rem;
 }
 
-.icon-arrows {
+.icon-arrow {
   font-size: 2rem;
 }
 
@@ -36,3 +36,4 @@ Single-colored icons can be modified like so:
 .icon-add {
   font-size: 2rem;
 }
+
