--- a/_includes/pagination/collection.html
+++ b/_includes/pagination/collection.html
@@ -1,22 +1,19 @@
-<div class="grid-container padding-bottom-3">
-  <div class="grid-x grid-padding-x">
-  
-    <div class="small-12 medium-6 cell">
-      {% if paginator.previous_page %}
-        <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}" class="button hollow expanded">
-          <svg class="icon icon-arrow icon-arrow-left"><use xlink:href="/assets/icons/symbol-defs.svg#icon-arrow-left"></use></svg> Newer
-        </a>
-      {% endif %}
-    </div>
-    
-    
-    <div class="small-12 {% if paginator.previous_page %}medium-6{% endif %} cell text-right">
-      {% if paginator.next_page %}
-      <a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}" class="button hollow expanded">
-          Older <svg class="icon icon-arrow icon-arrow-right"><use xlink:href="/assets/icons/symbol-defs.svg#icon-arrow-right"></use></svg>
+<div class="grid-x grid-padding-x grid-padding-y">
+
+  <div class="small-12 medium-6 {% unless paginator.next_page %}medium-12{% endunless %} cell">
+    {% if paginator.previous_page %}
+      <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}" class="button hollow expanded">
+        <svg class="icon icon-arrow icon-arrow_back"><use xlink:href="/assets/icons/symbol-defs.svg#icon-arrow_back"></use></svg>
       </a>
-      {% endif %}
-    </div>
-  
+    {% endif %}
   </div>
+  
+  <div class="small-12 {% if paginator.previous_page %}medium-6{% endif %} cell text-center">
+    {% if paginator.next_page %}
+    <a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}" class="button hollow expanded">
+    <svg class="icon icon-arrow icon-arrow_forward"><use xlink:href="/assets/icons/symbol-defs.svg#icon-arrow_forward"></use></svg>
+    </a>
+    {% endif %}
+  </div>
+
 </div>
