--- a/assets/scss/_settings.scss
+++ b/assets/scss/_settings.scss
@@ -328,7 +328,8 @@ $button-background-hover: scale-color($button-background, $lightness: -15%);
 $button-color: $white;
 $button-color-alt: $black;
 $button-radius: $global-radius;
-$button-hollow-border-width: 1px;
+// $button-hollow-border-width: 1px;
+$button-hollow-border-width: 0px;
 $button-sizes: (
   tiny: 0.6rem,
   small: 0.75rem,
