--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <!-- Page Content -->
-<div class="grid-x grid-padding-x grid-padding-y" data-aos="fade-in">
+<div class="grid-x grid-padding-x grid-padding-y">
   <div class="small-12 medium-6 cell">
     {{page.content | markdownify}}
   </div>
