--- a/_includes/partials/excerpt.html
+++ b/_includes/partials/excerpt.html
@@ -1,4 +1,4 @@
-<div class="small-12 medium-6 large-4 {% if project.is-full-width %}medium-12{% endif %} cell excerpt" data-aos="fade-in">
+<div class="small-12 medium-6 large-4 {% if project.is-full-width %}medium-12{% endif %} cell excerpt">
   <a href="{{ project.url }}">
     {% assign image = project.image %}
     <div class="margin-bottom-1 image" data-interchange="{% include images/interchange-img-small-12-medium-4-cell.html %}">
