--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,14 +19,12 @@ layout: compress
 </div>
 {% endif %}
 
-<div id="swup" class="transition-fade">
-
 <!-- Header -->
 {% include site/header.html %}
 <!-- End Header -->
 
 <!-- Main -->
-<main class="grid-y grid-padding-y align-center" style="min-height: 80vh">
+<main class="grid-y grid-padding-y align-center transition-left" style="min-height: 80vh" id="swup">
   <div class="cell">
   {{content}}
   </div>
@@ -37,7 +35,7 @@ layout: compress
 {% include reveal/navigation.html %}
 <!-- End Navigation -->
 
-</div>
+
 
 </body>
 
