--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -357,6 +357,7 @@ color: $black;
 }
 
 /* PAGE ANIMATIONS */
+
 .transition-fade {
   transition: 0.4s;
   opacity: 1;
@@ -364,6 +365,17 @@ color: $black;
 
 html.is-animating .transition-fade {
   opacity: 0;
+  transform: translateY(-100px);
+}
+
+.transition-left {
+  transition: 0.4s;
+  transform: translateX(0);
+}
+
+html.is-animating .transition-left {
+  opacity: 0;
+  transform: translateX(-100px);
 }
 
 // Hover Effect
