--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,20 +24,19 @@ layout: compress
 <!-- End Header -->
 
 <!-- Main -->
-<main class="grid-y grid-padding-y align-center swup-transition-left" style="min-height: 80vh" id="swup">
+<main class="grid-y grid-padding-y align-center swup-transition-fade" style="min-height: 80vh" id="swup">
   <div class="cell">
   {{content}}
   </div>
 </main>
 <!-- Main -->
 
+</div>
+
 <!-- Navigation -->
 {% include reveal/navigation.html %}
 <!-- End Navigation -->
 
-
-
 </body>
-
 
 </html>
