--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -365,7 +365,6 @@ color: $black;
 
 html.is-animating .swup-transition-fade {
   opacity: 0;
-  transform: translateY(-100px);
 }
 
 .swup-transition-left {
@@ -376,6 +375,17 @@ html.is-animating .swup-transition-fade {
 html.is-animating .swup-transition-left {
   opacity: 0;
   transform: translateX(-100px);
+}
+
+.swup-transition-up {
+  transform: translateY(0);
+  transition: 0.4s;
+  transition-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1);
+}
+
+html.is-animating .swup-transition-up {
+  opacity: 0;
+  transform: translateY(-1rem);
 }
 
 // Hover Effect
