--- a/_includes/site/header.html
+++ b/_includes/site/header.html
@@ -1,5 +1,5 @@
 <!-- Header -->
-<header class="grid-x grid-padding-x grid-padding-y align-justify align-middle swup-transition-fade" id="maintest"> 
+<header class="grid-x grid-padding-x grid-padding-y align-justify align-middle swup-transition-up" id="maintest"> 
   <div class="auto cell">
   {% if page.layout == "project" %}
   <a data-toggle="navigation" class="h5">{{page.title}}{% if page.client %}<span class="dark-gray padding-left-1 show-for-large">{{page.client}}</span>{% endif %}</a>
