--- a/_includes/site/loading.html
+++ b/_includes/site/loading.html
@@ -1,4 +1,4 @@
-<div class="grid-x grid-padding-x align-center" data-aos="fade-up">
+<div class="grid-x grid-padding-x align-center">
   <div class="small-11 medium-6 cell h1 text-center black">
     {{site.title}}
   </div>
