--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@ layout: compress
 <!-- End Header -->
 
 <!-- Main -->
-<main class="grid-y grid-padding-y align-center swup-transition-fade" style="min-height: 80vh" id="swup">
+<main class="grid-y grid-padding-y align-center swup-transition-fade" style="min-height: 80vh" id="swup-body">
   <div class="cell">
   {{content}}
   </div>
