--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -113,6 +113,7 @@ body {
   cursor: default;
   font-kerning: normal;
   margin: 0;
+  transition: background-color 400ms cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 
 svg {
