--- a/_includes/reveal/meta.html
+++ b/_includes/reveal/meta.html
@@ -1,4 +1,4 @@
-<div class="reveal project__meta" id="project__meta" data-reveal data-animation-in="fade-in fast" data-animation-out="fade-out fast">
+<div class="reveal project__meta" id="project__meta-{{page.title |slugify}}" data-reveal data-animation-in="fade-in fast" data-animation-out="fade-out fast">
   <div class="grid-x grid-padding-x grid-padding-y align-center-middle" style="height: 100%">
     <div class="shrink cell text-center">
 
