--- a/assets/scss/_lightgallery.scss
+++ b/assets/scss/_lightgallery.scss
@@ -518,6 +518,7 @@ $zindex-backdrop: 1040 !default;
     top: 0;
     width: 100%;
     background-color: $lg-toolbar-bg;
+    padding: 3rem;
 
     .lg-icon {
         color: $lg-toolbar-icon-color;
