--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -26,7 +26,7 @@ layout: default
 <!-- Meta -->
 <div class="grid-x grid-padding-x grid-padding-y align-center">
   <div class="small-12 medium-10 cell text-center">
-    <a data-toggle="project__meta"><svg class="icon icon-add"><use xlink:href="/assets/icons/symbol-defs.svg#icon-add"></use></svg></a>
+    <a data-toggle="project__meta-{{page.title |slugify}}"><svg class="icon icon-add"><use xlink:href="/assets/icons/symbol-defs.svg#icon-add"></use></svg></a>
   </div>
 </div>
 <!-- End Meta -->
