Add Close Button to Meta Reveal

--- a/_includes/reveal/meta.html
+++ b/_includes/reveal/meta.html
@@ -32,6 +32,10 @@
       </div>
       {% endif %}
 
+  <button class="hollow button" data-close aria-label="Close modal" type="button">
+    <svg class="icon icon-remove"><use xlink:href="/assets/icons/symbol-defs.svg#icon-remove"></use></svg>
+  </button>
+
     </div>
   </div>
 </div>
