--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -8,7 +8,7 @@ layout: default
     <div class="small-12 cell">
 
       {% assign image = page.image %}
-      <div data-interchange="{% include images/interchange-img-small-12-medium-12-cell.html %}" class="image">
+      <div data-interchange="{% include images/interchange-img-small-12-medium-12-cell.html %}" class="image" data-aos="fade-in">
         {% if page.video %}
         <div class="grid-y height-100 align-center video content">
           <div class="shrink cell text-center" data-src="{{page.video}}">
